# roomba-rpi

./: README.md
docs/: electrical.md  raspbian.md  roomba_remote_control.md  roomba_ros2.md  ros2_rpizw_build.md
electrical/: .gitignore  README.md  parts_list.csv  roomba-rpi.pro  roomba-rpi.sch
software/raspbian/: README.md
software/raspbian/boot/: config.txt
software/raspbian/etc/: rc.local
software/raspbian/etc/udev/rules.d/: 99-ds4.rules
software/raspbian/lib/udev/: hwclock-set
software/raspbian/opt/: set_ds4_led_color.sh
software/roomba_remote_control/: README.md  controller.json  requirements.txt  roomba_remote_control.py
software/roomba_remote_control/rrc/: __init__.py  cli.py  controller.py  roomba.py  util.py
software/roomba_ros2/: README.md  roomba_ros2.repos
software/roomba_ros2/roomba_bringup/: CMakeLists.txt  package.xml
software/roomba_ros2/roomba_bringup/config/: bno055.yaml  ds4_teleop.yaml  roomba.yaml
software/roomba_ros2/roomba_bringup/launch/: joy_teleop.launch.py  roomba.launch.py
software/roomba_ros2/roomba_ros2/: CMakeLists.txt  package.xml
